Regen with newPage instead of setPage
